--- a/package.json
+++ b/package.json
@@ -1,16 +1,6 @@
 {
   "name": "portfolio24",
   "version": "0.0.1",
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "test": "vitest",
-    "lint": "prettier --check . && eslint .",
-    "format": "prettier --write ."
-  },
   "devDependencies": {
     "@fontsource/fira-mono": "^5.0.0",
     "@neoconfetti/svelte": "^2.0.0",
@@ -35,8 +25,18 @@
     "vite": "^5.0.3",
     "vitest": "^2.0.0"
   },
-  "type": "module",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "test": "vitest",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write ."
+  },
   "trustedDependencies": [
     "svelte-preprocess"
-  ]
+  ],
+  "type": "module"
 }
