--- a/package.json
+++ b/package.json
@@ -38,5 +38,11 @@
   "trustedDependencies": [
     "svelte-preprocess"
   ],
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "clsx": "^2.1.1",
+    "svelte-inview": "^4.0.2",
+    "svelte-motion": "^0.12.2",
+    "tailwind-merge": "^2.5.2"
+  }
 }
